--- a/.github/workflows/release-app.yaml
+++ b/.github/workflows/release-app.yaml
@@ -17,7 +17,6 @@ jobs:
   release:
     name: Release Build and Publish
     runs-on: ubuntu-latest
-    container: ghcr.io/catfriend1/syncthing-lite-builder
     steps:
       - uses: actions/checkout@v4
         with:
@@ -26,11 +25,43 @@ jobs:
 
       - name: Ensure release branch
         run: |
-          git config --system --add safe.directory '*'
+          git config --global --add safe.directory '*'
           if ! git branch -a --contains $(git rev-parse HEAD) | grep release >/dev/null; then
             echo "Tag is not part of release branch - aborting..."
             exit 1
           fi
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Install Android SDK
+        run: |
+          set -eu
+          # Set environment variables
+          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          
+          echo "Installing Android SDK from scratch"
+          # Install Android command line tools
+          SDK_TOOLS_VERSION="11076708"
+          SDK_TOOLS_FILE="commandlinetools-linux-${SDK_TOOLS_VERSION}_latest.zip"
+          
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          cd $HOME/android-sdk/cmdline-tools
+          
+          wget -q "https://dl.google.com/android/repository/${SDK_TOOLS_FILE}"
+          unzip -q "${SDK_TOOLS_FILE}"
+          rm "${SDK_TOOLS_FILE}"
+          
+          # Move to expected location
+          mv cmdline-tools latest
+          
+          # Accept Android licenses
+          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
 
       - name: Get app version from libs.versions.toml
         id: get_version
@@ -38,18 +69,6 @@ jobs:
           set -eu
           VERSION=$(grep 'version-name = ' gradle/libs.versions.toml | cut -d '"' -f 2)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Get commit hash
-        id: get_commit_hash
-        run: |
-          set -eu
-          if [ "${{ github.event_name }}" = "pull_request" ]; then
-            COMMIT_HASH_LONG="${{ github.event.pull_request.head.sha }}"
-          else
-            COMMIT_HASH_LONG="${{ github.sha }}"
-          fi
-          COMMIT_HASH_SHORT=$(echo "$COMMIT_HASH_LONG" | cut -c1-7)
-          echo "COMMIT_HASH=${COMMIT_HASH_SHORT}" >> $GITHUB_ENV
 
       - name: build_release
         env:
