--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -49,6 +49,47 @@ jobs:
           
           echo "Set GRADLE_USER_HOME to: ${{ runner.temp }}/.gradle"
           echo "Set ANDROID_USER_HOME to: ${{ runner.temp }}/.android"
+
+      - name: Cache Android SDK
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/android-sdk
+          key: android-sdk-${{ runner.os }}-${{ steps.get_ndk_version.outputs.ndk_version }}
+          restore-keys: |
+            android-sdk-${{ runner.os }}-
+
+      - name: Install Android SDK
+        run: |
+          set -eu
+          # Set environment variables (always needed regardless of cache status)
+          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          
+          # Check if SDK is already installed (from cache)
+          if [ -d "$HOME/android-sdk/cmdline-tools/latest" ]; then
+            echo "Android SDK found in cache - skipping installation"
+          else
+            echo "Installing Android SDK from scratch"
+            # Install Android command line tools
+            SDK_TOOLS_VERSION="11076708"
+            SDK_TOOLS_FILE="commandlinetools-linux-${SDK_TOOLS_VERSION}_latest.zip"
+            
+            mkdir -p $HOME/android-sdk/cmdline-tools
+            cd $HOME/android-sdk/cmdline-tools
+            
+            wget -q "https://dl.google.com/android/repository/${SDK_TOOLS_FILE}"
+            unzip -q "${SDK_TOOLS_FILE}"
+            rm "${SDK_TOOLS_FILE}"
+            
+            # Move to expected location
+            mv cmdline-tools latest
+            
+            # Accept Android licenses (only needed for fresh installation)
+            yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+          fi
+
       - name: Get app version from libs.versions.toml
         id: get_version
         run: |
