--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -14,6 +14,7 @@ jobs:
   build:
     name: Debug Build
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - uses: actions/checkout@v4
         with:
