--- a/.github/workflows/release-app.yaml
+++ b/.github/workflows/release-app.yaml
@@ -14,6 +14,7 @@ jobs:
   release:
     name: Release Build and Publish
     runs-on: ubuntu-latest
+    environment: prod
     steps:
       - uses: actions/checkout@v4
         with:
