--- a/.github/workflows/release-app.yaml
+++ b/.github/workflows/release-app.yaml
@@ -4,6 +4,11 @@ permissions:
   contents: write
 
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to publish (e.g. v1.0.0.0 or v1.0.0.0-rc.1)'
+        required: false
   push:
     # Cannot filter on both branches (release) and tags - it's ORed
     tags:
