--- a/.github/workflows/release-app.yaml
+++ b/.github/workflows/release-app.yaml
@@ -20,6 +20,7 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
+          ref: ${{ github.event.inputs.tag }}
 
       - name: Ensure release branch
         run: |
@@ -107,9 +108,10 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
+          tag: ${{ github.event.inputs.tag }}
           artifacts: "app/build/outputs/apk/release/*.apk,app/build/outputs/apk/release/*.asc"
           artifactErrorsFailBuild: true
           name: Syncthing-Lite v${{ env.VERSION }}
           bodyFile: "app/src/main/play/release-notes/en-US/default.txt"
-          prerelease: ${{ contains('-rc.', github.ref_name) }}
+          prerelease: ${{ contains(github.event.inputs.tag, '-rc.') }}
           draft: true
